[package]
name = "cli"
version = "0.0.14"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
testsys-model = { version = "0", path = "../model" }
serde_json = "1"
terminal_size = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

[dev-dependencies]
assert_cmd = "2"
selftest = { version = "0", path = "../selftest" }

[features]
# The `integ` feature enables integration tests. These tests require docker and kind.
integ = []
