[package]
name = "controller"
version = "0.0.13"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-types = "1"
aws-sdk-cloudwatchlogs = "1"
env_logger = "0.10"
futures = "0.3"
http = "1"
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_24"] }
kube = { version = "0.88", default-features = false, features = ["derive", "client", "rustls-tls"] }
kube-runtime = "0.88"
lazy_static = "1"
log = "0.4"
testsys-model = { version = "0.0.13", path = "../model" }
snafu = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
