[package]
name = "builder-derive"
version = "0.0.14"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
serde = "1"

[lib]
proc-macro = true

[dev-dependencies]
serde = "1"
serde_json= "1"
testsys-model = { version = "0.0.14", path = "../../model" }
configuration-derive = { version = "0.0.14", path = "../configuration-derive" }
